baml_language/crates/baml_tests/snapshots/compiles/closures/baml_tests__compiles__closures__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Box {
  value: T
}
class user.Box$stream {
  value: T | null
}
class user.Calculator {
  op: string
}
class user.Calculator$stream {
  op: string | null
}
class user.Config {
  encoder: user.Encoder
}
class user.Config$stream {
  encoder: user.Encoder$stream | null
}
class user.Counter {
  value: int
}
class user.Counter$stream {
  value: int | null
}
class user.Employee {
  first: string
  last: string
}
class user.Employee$stream {
  first: string | null
  last: string | null
}
class user.Encoder {
  charset: string
}
class user.Encoder$stream {
  charset: string | null
}
class user.Formatter {
  prefix: string
}
class user.Formatter$stream {
  prefix: string | null
}
class user.RangeCheck {
  min: int
  max: int
}
class user.RangeCheck$stream {
  min: int | null
  max: int | null
}
function user.apply(f: (int, int) -> int, a: int, b: int) -> int  [expr] {
  {  } f(a, b)
}
function user.apply_to_each(items: user.Employee[], f: (user.Employee) -> string) -> string[]  [expr] {
  {  } items.map(f)
}
function user.compute(self: ?, a: int, b: int) -> int  [expr] {
  {  } if (self.op Eq "add") {  } a Add b else {  } a Mul b
}
function user.encode(self: ?, data: string) -> string  [expr] {
  {  } "[" Add self.charset Add "]" Add data
}
function user.format(self: ?, text: string) -> string  [expr] {
  {  } self.prefix Add text
}
function user.full_name(self: ?) -> string  [expr] {
  {  } self.first Add " " Add self.last
}
function user.greet(self: ?, greeting: string) -> string  [expr] {
  {  } greeting Add ", " Add self.first
}
function user.increment(self: ?) -> int  [expr] {
  { self.value Add= 1 } self.value
}
function user.is_valid(self: ?, n: int) -> bool  [expr] {
  {  } n Ge self.min And n Le self.max
}
function user.test_bound_in_lambda() -> string  [expr] {
  { let emp = user.Employee { first: "Alice", last: "Smith" }; let make_greeter = () -> { {  } emp.greet }; let greeter = make_greeter() } greeter("Hello")
}
function user.test_bound_mapper() -> string[]  [expr] {
  { let fmt = user.Formatter { prefix: ">> " }; let transform = fmt.format } ["hello", "world"].map(transform)
}
function user.test_bound_validator() -> bool[]  [expr] {
  { let valid = user.RangeCheck { min: 10, max: 50 }; let check = valid.is_valid } [5, 15, 25, 75].map(check)
}
function user.test_field_chain_bind(cfg: user.Config) -> string  [expr] {
  { let enc = cfg.encoder.encode } enc("payload")
}
function user.test_generic_bind() -> int  [expr] {
  { let b = user.Box { value: 42 }; let get = b.unwrap } get()
}
function user.test_mutation_after_bind() -> int  [expr] {
  { let c = user.Counter { value: 0 }; let inc = c.increment; c.value = 100 } inc()
}
function user.test_repeated_bound_calls() -> int  [expr] {
  { let c = user.Counter { value: 0 }; let inc = c.increment; inc(); inc() } inc()
}
function user.test_strategy() -> int[]  [expr] {
  { let add_calc = user.Calculator { op: "add" }; let mul_calc = user.Calculator { op: "mul" }; let do_add = add_calc.compute; let do_mul = mul_calc.compute } [apply(do_add, 3, 4), apply(do_mul, 3, 4)]
}
function user.test_unbound_higher_order() -> string[]  [expr] {
  { let employees = [user.Employee { first: "Alice", last: "Smith" }] } apply_to_each(employees, Employee.full_name)
}
function user.test_unbound_in_map() -> string[]  [expr] {
  { let employees = [user.Employee { first: "Alice", last: "Smith" }, user.Employee { first: "Bob", last: "Jones" }] } employees.map(Employee.full_name)
}
function user.unwrap(self: ?) -> T  [expr] {
  {  } self.value
}

--- captures ---
lambda () in test_bound_in_lambda: captures [emp]
