baml_language/crates/baml_tests/snapshots/compiles/closures/baml_tests__compiles__closures__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Formatter {
  prefix: string
}
function user.Formatter.format(self: user.Formatter, text: string) -> string throws never {
  { : string
    self.prefix + text : string
  }
}
function user.Formatter.to_json(self: user.Formatter) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "prefix": self.prefix.to_json() } : map<string, baml.json.json>
}
function user.Formatter.from_json(j: baml.json.json) -> user.Formatter throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Formatter
}
class user.RangeCheck {
  min: int
  max: int
}
function user.RangeCheck.is_valid(self: user.RangeCheck, n: int) -> bool throws never {
  { : bool
    n >= self.min && n <= self.max : bool
  }
}
function user.RangeCheck.to_json(self: user.RangeCheck) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "min": self.min.to_json(), "max": self.max.to_json() } : map<string, baml.json.json>
}
function user.RangeCheck.from_json(j: baml.json.json) -> user.RangeCheck throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.RangeCheck
}
class user.Counter {
  value: int
}
function user.Counter.increment(self: user.Counter) -> int throws never {
  { : int
    self.value Add= 1 : int
    self.value : int
  }
}
function user.Counter.to_json(self: user.Counter) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": self.value.to_json() } : map<string, baml.json.json>
}
function user.Counter.from_json(j: baml.json.json) -> user.Counter throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Counter
}
class user.Employee {
  first: string
  last: string
}
function user.Employee.full_name(self: user.Employee) -> string throws never {
  { : string
    self.first + " " + self.last : string
  }
}
function user.Employee.greet(self: user.Employee, greeting: string) -> string throws never {
  { : string
    greeting + ", " + self.first : string
  }
}
function user.Employee.to_json(self: user.Employee) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "first": self.first.to_json(), "last": self.last.to_json() } : map<string, baml.json.json>
}
function user.Employee.from_json(j: baml.json.json) -> user.Employee throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Employee
}
class user.Config {
  encoder: user.Encoder
}
function user.Config.to_json(self: user.Config) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "encoder": self.encoder.to_json() } : map<string, baml.json.json>
}
function user.Config.from_json(j: baml.json.json) -> user.Config throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Config
}
class user.Encoder {
  charset: string
}
function user.Encoder.encode(self: user.Encoder, data: string) -> string throws never {
  { : string
    "[" + self.charset + "]" + data : string
  }
}
function user.Encoder.to_json(self: user.Encoder) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "charset": self.charset.to_json() } : map<string, baml.json.json>
}
function user.Encoder.from_json(j: baml.json.json) -> user.Encoder throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Encoder
}
class user.Box {
  value: T
}
function user.Box.unwrap(self: user.Box) -> unknown throws never {
  { : T
    self.value : T
  }
}
function user.Box.to_json(self: user.Box) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": baml.json.to_json(self.value) } : map<string, baml.json.json>
}
function user.Box.from_json(j: baml.json.json) -> user.Box<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Box<T>
}
class user.Calculator {
  op: string
}
function user.Calculator.compute(self: user.Calculator, a: int, b: int) -> int throws never {
  { : int
    if (self.op == "add" : bool) : int
      { : int
        a + b : int
      }
    else
      { : int
        a * b : int
      }
  }
}
function user.Calculator.to_json(self: user.Calculator) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "op": self.op.to_json() } : map<string, baml.json.json>
}
function user.Calculator.from_json(j: baml.json.json) -> user.Calculator throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Calculator
}
function user.test_bound_mapper() -> string[] throws never {
  { : string[]
    let fmt = Formatter { prefix: ">> " } : user.Formatter
    let transform = fmt.format : (text: string) -> string throws never
    ["hello", "world"].map<U, E>(transform) : string[]
  }
}
function user.test_unbound_in_map() -> string[] throws never {
  { : string[]
    let employees = [Employee { first: "Alice", last: "Smith" }, Employee { first: "Bob", last: "Jones" }] : user.Employee[]
    employees.map<U, E>(Employee.full_name) : string[]
  }
}
function user.test_bound_validator() -> bool[] throws never {
  { : bool[]
    let valid = RangeCheck { min: 10, max: 50 } : user.RangeCheck
    let check = valid.is_valid : (n: int) -> bool throws never
    [5, 15, 25, 75].map<U, E>(check) : bool[]
  }
}
function user.test_field_chain_bind(cfg: user.Config) -> string throws never {
  { : string
    let enc = cfg.encoder.encode : (data: string) -> string throws never
    enc("payload") : string
  }
}
function user.apply(f: (int, int) -> int throws never, a: int, b: int) -> int throws never {
  { : int
    f<__effect_param_0>(a, b) : int
  }
}
function user.test_strategy() -> int[] throws never {
  { : int[]
    let add_calc = Calculator { op: "add" } : user.Calculator
    let mul_calc = Calculator { op: "mul" } : user.Calculator
    let do_add = add_calc.compute : (a: int, b: int) -> int throws never
    let do_mul = mul_calc.compute : (a: int, b: int) -> int throws never
    [apply(do_add, 3, 4), apply(do_mul, 3, 4)] : int[]
  }
}
function user.apply_to_each(items: user.Employee[], f: (user.Employee) -> string throws never) -> string[] throws never {
  { : string[]
    items.map<U, E>(f) : string[]
  }
}
function user.test_unbound_higher_order() -> string[] throws never {
  { : string[]
    let employees = [Employee { first: "Alice", last: "Smith" }] : user.Employee[]
    apply_to_each<__effect_param_0>(employees, Employee.full_name) : string[]
  }
}
function user.test_mutation_after_bind() -> int throws never {
  { : int
    let c = Counter { value: 0 } : user.Counter
    let inc = c.increment : () -> int throws never
    c.value = 100 : 100
    inc() : int
  }
}
function user.test_generic_bind() -> int throws never {
  { : int
    let b = Box { value: 42 } : user.Box
    let get = b.unwrap : () -> T throws never
    get<T>() : int
  }
}
function user.test_bound_in_lambda() -> string throws never {
  { : string
    let emp = Employee { first: "Alice", last: "Smith" } : user.Employee
    let make_greeter = : () -> ((greeting: string) -> string throws never) throws never
      () -> { ... } : () -> ((greeting: string) -> string throws never) throws never
        {
          emp.greet
        }
    let greeter = make_greeter() : (greeting: string) -> string throws never
    greeter("Hello") : string
  }
}
lambda user.test_bound_in_lambda {
}
function user.test_repeated_bound_calls() -> int throws never {
  { : int
    let c = Counter { value: 0 } : user.Counter
    let inc = c.increment : () -> int throws never
    inc() : int
    inc() : int
    inc() : int
  }
}
class user.Formatter$stream {
  prefix: null | string
}
class user.RangeCheck$stream {
  min: null | int
  max: null | int
}
class user.Counter$stream {
  value: null | int
}
class user.Employee$stream {
  first: null | string
  last: null | string
}
class user.Config$stream {
  encoder: null | user.Encoder$stream
}
class user.Encoder$stream {
  charset: null | string
}
class user.Box$stream {
  value: null | T
}
class user.Calculator$stream {
  op: null | string
}
