baml_language/crates/baml_tests/snapshots/compiles/closures/baml_tests__compiles__closures__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 6103
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
