baml_language/crates/baml_tests/snapshots/compiles/closures/baml_tests__compiles__closures__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Box.unwrap(self: null) -> void {
    load_var self
    load_field .value
    return
}

function user.Calculator.compute(self: null, a: int, b: int) -> int {
    load_var self
    load_field .op
    load_const "add"
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var a
    load_var b
    mul_int
    jump L2

  L1:
    load_var a
    load_var b
    add_int

  L2:
    return
}

function user.Counter.increment(self: null) -> int {
    load_var self
    load_var self
    load_field .value
    load_const 1
    bin_op +
    store_field .value
    load_var self
    load_field .value
    return
}

function user.Employee.full_name(self: null) -> string {
    load_var self
    load_field .first
    load_const " "
    bin_op +
    load_var self
    load_field .last
    bin_op +
    return
}

function user.Employee.greet(self: null, greeting: string) -> string {
    load_var greeting
    load_const ", "
    bin_op +
    load_var self
    load_field .first
    bin_op +
    return
}

function user.Encoder.encode(self: null, data: string) -> string {
    load_const "["
    load_var self
    load_field .charset
    bin_op +
    load_const "]"
    bin_op +
    load_var data
    bin_op +
    return
}

function user.Formatter.format(self: null, text: string) -> string {
    load_var self
    load_field .prefix
    load_var text
    bin_op +
    return
}

function user.RangeCheck.is_valid(self: null, n: int) -> bool {
    load_var n
    load_var self
    load_field .min
    cmp_op >=
    jump_if_false L0
    pop 1
    load_var n
    load_var self
    load_field .max
    cmp_int_op <=

  L0:
    return
}

function user.apply(f: (int, int) -> int throws never, a: int, b: int) -> int {
    load_var a
    load_var b
    load_var f
    call_indirect
    return
}

function user.apply_to_each(items: Employee[], f: (Employee) -> string throws never) -> string[] {
    load_var items
    load_var f
    call baml.Array.map
    return
}

function user.test_bound_in_lambda() -> string {
    load_var ?1
    make_cell
    store_var ?1
    alloc_instance user.Employee
    load_const "Alice"
    init_field .first
    load_const "Smith"
    init_field .last
    store_deref ?1
    load_var emp
    load_const ?
    make_closure .<lambda(test_bound_in_lambda, 0)>
    call_indirect
    store_var greeter
    load_const "Hello"
    load_var greeter
    call_indirect
    return
}

function user.test_bound_mapper() -> string[] {
    load_const "hello"
    load_const "world"
    alloc_array 2
    alloc_instance user.Formatter
    load_const ">> "
    init_field .prefix
    make_bound_method user.Formatter.format
    call baml.Array.map
    return
}

function user.test_bound_validator() -> bool[] {
    load_const 5
    load_const 15
    load_const 25
    load_const 75
    alloc_array 4
    alloc_instance user.RangeCheck
    load_const 10
    init_field .min
    load_const 50
    init_field .max
    make_bound_method user.RangeCheck.is_valid
    call baml.Array.map
    return
}

function user.test_field_chain_bind(cfg: Config) -> string {
    load_const "payload"
    load_var cfg
    load_field .encoder
    make_bound_method user.Encoder.encode
    call_indirect
    return
}

function user.test_generic_bind() -> int {
    alloc_instance user.Box
    load_const 42
    init_field .value
    make_bound_method user.Box.unwrap
    call_indirect
    return
}

function user.test_mutation_after_bind() -> int {
    alloc_instance user.Counter
    load_const 0
    init_field .value
    store_var c
    load_var c
    make_bound_method user.Counter.increment
    store_var inc
    load_var c
    load_const 100
    store_field .value
    load_var inc
    call_indirect
    return
}

function user.test_repeated_bound_calls() -> int {
    alloc_instance user.Counter
    load_const 0
    init_field .value
    make_bound_method user.Counter.increment
    store_var inc
    load_var inc
    call_indirect
    pop 1
    load_var inc
    call_indirect
    pop 1
    load_var inc
    call_indirect
    return
}

function user.test_strategy() -> int[] {
    alloc_instance user.Calculator
    load_const "add"
    init_field .op
    make_bound_method user.Calculator.compute
    load_const 3
    load_const 4
    call user.apply
    store_var _5
    alloc_instance user.Calculator
    load_const "mul"
    init_field .op
    make_bound_method user.Calculator.compute
    load_const 3
    load_const 4
    call user.apply
    store_var _7
    load_var _5
    load_var _7
    alloc_array 2
    return
}

function user.test_unbound_higher_order() -> string[] {
    alloc_instance user.Employee
    load_const "Alice"
    init_field .first
    load_const "Smith"
    init_field .last
    alloc_array 1
    load_global user.Employee.full_name
    call user.apply_to_each
    return
}

function user.test_unbound_in_map() -> string[] {
    alloc_instance user.Employee
    load_const "Alice"
    init_field .first
    load_const "Smith"
    init_field .last
    alloc_instance user.Employee
    load_const "Bob"
    init_field .first
    load_const "Jones"
    init_field .last
    alloc_array 2
    load_global user.Employee.full_name
    call baml.Array.map
    return
}
